coderqi - fixed button on search page, wrapping on browse page, and form input widths on home page / big home link

--- a/coderqi/css/index_style.css
+++ b/coderqi/css/index_style.css
@@ -25,7 +25,7 @@ header {
 	}
 		.search div {
 			display: inline-block;
-			max-width: 200px;
+			width: 200px;
 		}
 			.search div input {
 				width: 100%;
